fix: font-size on mobile devices

--- a/theme/assets/scss/03-global/_footer.scss
+++ b/theme/assets/scss/03-global/_footer.scss
@@ -70,6 +70,10 @@
 
   .site-title {
     font-size: 5rem;
+
+    @include media-breakpoint-down(sm) {
+      font-size: 17vw;
+    }
   }
 
   h3 {
